[gd_scene load_steps=8 format=2]

[ext_resource path="res://Hand/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://market/MoneyTake.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://market/market.gd" type="Script" id=4]
[ext_resource path="res://market/tileStack.gd" type="Script" id=5]
[ext_resource path="res://market/moneyStack.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="market" type="Node2D"]
script = ExtResource( 4 )

[node name="tilesMarket" parent="." instance=ExtResource( 1 )]
visible = false
script = null

[node name="tilesHand" parent="tilesMarket" instance=ExtResource( 1 )]

[node name="tileStack" parent="tilesMarket" instance=ExtResource( 1 )]
visible = false
script = ExtResource( 5 )

[node name="Hand" parent="tilesMarket/tileStack" instance=ExtResource( 1 )]

[node name="moneyMarket" type="Node2D" parent="."]
position = Vector2( 0, 100 )
script = ExtResource( 2 )

[node name="moneyHand" parent="moneyMarket" instance=ExtResource( 1 )]

[node name="moneyStack" parent="moneyMarket" instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, -100 )
script = ExtResource( 6 )

[node name="Hand" parent="moneyMarket/moneyStack" instance=ExtResource( 1 )]

[node name="RefillMoneyButton" type="Button" parent="."]
margin_left = 811.0
margin_top = 22.0
margin_right = 918.0
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RefillMoneyButton"]
margin_left = 5.0
margin_top = 9.0
margin_right = 103.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.772549, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 1 )
text = "Refill Money"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TakeMoneyButton" type="Button" parent="."]
margin_left = 803.0
margin_top = 89.0
margin_right = 910.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TakeMoneyButton"]
margin_left = 5.0
margin_top = 9.0
margin_right = 103.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.772549, 0.109804, 0.109804, 1 )
custom_fonts/font = SubResource( 1 )
text = "Take"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RefillMoneyButton" to="." method="_on_RefillMoneyButton_pressed"]
[connection signal="pressed" from="TakeMoneyButton" to="." method="_on_TakeMoneyButton_pressed"]
